--- a/assets/src/App.css
+++ b/assets/src/App.css
@@ -1,46 +1,64 @@
-.App {
-  text-align: center;
-}
-.App code {
-  background: #FFF3;
-  padding: 4px 8px;
-  border-radius: 4px;
-}
-.App p {
-  margin: 0.4rem;
+div.app {
+  padding: 50px 90px;
+  background-color: #1C1E21
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: nowrap;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+header div.logo {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  flex: 1;
+}
+
+header div.logo img {
+  width: 55px;
+  height: 55px;
+  border-radius: 100px;
+  margin-right: 20px;
+}
+
+header div.logo div.logo-content h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  font-weight: 600;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+header div.logo div.logo-content h2 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.65);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div.app a {
+  display: block;
+}
+
+
+
+div.app a.facebook-link {
+  width: 24px;
+  height: 24px;
+  margin-right: 30px;
+}
+
+div.app a.discord-link {
+  padding: 13px 16px;
+  padding-bottom: 8px;
+  background-color: rgb(114,137,218);
+  border-radius: 5px;
+}
+
+div.app a.discord-link img {
+  width: 85px;
+  height: 100%;
 }
