--- a/assets/src/components/Header.css
+++ b/assets/src/components/Header.css
@@ -1,16 +1,16 @@
 header {
-    display: flex;
+    display: flex;         
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
   }
   
-  header div.logo {
+  header div.logo { 
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    flex: 1;
+    flex: 1;              /*stretch out box*/
   }
   
   header div.logo img {
@@ -34,26 +34,26 @@ header {
     color: rgba(255, 255, 255, 0.65);
   }
   
-  div.app a {
+  header a {
     display: block;
   }
   
   
   
-  div.app a.facebook-link {
+  header a.facebook-link {
     width: 24px;
     height: 24px;
     margin-right: 30px;
   }
   
-  div.app a.discord-link {
+  header a.discord-link {
     padding: 13px 16px;
     padding-bottom: 8px;
     background-color: rgb(114,137,218);
     border-radius: 5px;
   }
   
-  div.app a.discord-link img {
+  header a.discord-link img {
     width: 85px;
     height: 100%;
   }
