Minor changes to the games page

--- a/assets/src/components/EventTemplate.css
+++ b/assets/src/components/EventTemplate.css
@@ -55,6 +55,7 @@ div.EventTemp {
     border-radius: 4px;
     color:rgba(255, 255, 255, 0.8);
     height: 100px;
+    resize: vertical;
   }
 
   div.EventTemp div.container div.contents main.EventTemplate button{
