--- a/assets/src/components/EventTemplate.scss
+++ b/assets/src/components/EventTemplate.scss
@@ -29,6 +29,7 @@ main.event-template {
     border-radius: 4px;
     color:rgba(255, 255, 255, 0.8);
     height: 100px;
+    resize: vertical;
   }
 
   button {
