Groups page now gets information from the database.

--- a/assets/src/components/Groups/GroupCard.scss
+++ b/assets/src/components/Groups/GroupCard.scss
@@ -40,7 +40,7 @@ div.group-card {
       }
     }
 
-    button {
+    a {
       padding: 12px;
       border: none;
       border-radius: 5px;
@@ -50,6 +50,7 @@ div.group-card {
       font-size: 14px;
       color: white;
       font-weight: 600;
+      text-decoration: none;
     }
   }
 
