--- a/assets/src/components/Sidebar.scss
+++ b/assets/src/components/Sidebar.scss
@@ -3,7 +3,7 @@ aside {
   
   a {
     font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 400;
     color: white;
     display: flex;
@@ -11,6 +11,7 @@ aside {
     flex-wrap: nowrap;
     align-items: center;
     margin-bottom: 50px;
+    text-decoration: none;
     
     img {
       margin-right: 30px;
