--- a/assets/src/components/Layout/Layout.scss
+++ b/assets/src/components/Layout/Layout.scss
@@ -2,10 +2,13 @@ div.layout {
   display: grid;
   grid-template-areas:
     "header header header"
+    "sidebar content announcements"
     "sidebar content widget";
 
   grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: min-content min-content 1fr;
   column-gap: 50px;
+  
 
   div.header {
     grid-area: header;
@@ -15,6 +18,7 @@ div.layout {
   div.sidebar { grid-area: sidebar; }
   div.content { grid-area: content; }
   div.widget { grid-area: widget; }
+  div.announcements { grid-area: announcements; }
 
 
   padding: 50px 90px;
