--- a/assets/src/components/Games/Games.scss
+++ b/assets/src/components/Games/Games.scss
@@ -19,8 +19,9 @@ div.submit {
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;  
+  margin-bottom: 4px;
   a{
-      background-color: rgb(63, 199, 241);
+      background-color: rgb(243, 243, 243);
       font-family: 'Open Sans', sans-serif;
       font-size: 14px;
       font-weight: 600;
