--- a/assets/src/components/Header.scss
+++ b/assets/src/components/Header.scss
@@ -4,6 +4,113 @@ header {
   flex-wrap: nowrap;
   align-items: center;
 
+  div.rainbow1{
+      position: absolute;
+      width: 118.46px;
+      height: 10px;
+      left: 0px;
+      top: 0px;
+      background: #3A53A5;
+  }
+  div.rainbow2{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 118.46px;
+    top: 0px;
+    background: #4279BC;
+  }
+  div.rainbow3{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 236.92px;
+    top: 0px;
+    background: #3FC7F1;
+  }
+  div.rainbow4{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 355.38px;
+    top: 0px;
+    background: #853F98;
+  }
+
+  div.rainbow5{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 473.85px;
+    top: 0px;
+    background: #B53E98;
+}
+  div.rainbow6{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 592.31px;
+    top: 0px;
+    background: #D24297;
+  }
+  div.rainbow7{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 710.77px;
+    top: 0px;
+    background: #ED1C24;
+  }
+  div.rainbow8{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 829.23px;
+    top: 0px;
+    background: #F37521;
+  }
+
+  div.rainbow9{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 947.69px;
+    top: 0px;
+    background: #FCD704;
+  }
+  div.rainbow10{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 1066.15px;
+    top: 0px;
+    background: #F3EC18;
+  }
+  div.rainbow11{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 1184.62px;
+    top: 0px;
+    background: #6CBD47;
+  }
+  div.rainbow12{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 1303.08px;
+    top: 0px;
+    background: #98C93C;
+  }
+  div.rainbow13{
+    position: absolute;
+    width: 118.46px;
+    height: 10px;
+    left: 1421.54px;
+    top: 0px;
+    background: #D4DE25;
+  }
+  
   div.logo { 
     display: flex;
     flex-direction: row;
