--- a/assets/src/components/AnnouncementBox.scss
+++ b/assets/src/components/AnnouncementBox.scss
@@ -21,26 +21,19 @@ div.announcement-box {
         
           div.date{
             background-color: #323437;
-            height: 69px;
-            width: 59px;
+            height: 30px;
+            width: 60px;
             border-radius: 5px;
             padding-top: 5px;
-            margin-right: 20px;
+            margin-right: 10px;
             h1 {
                 text-align: center;
                 font-family: 'Open Sans', sans-serif;
-                font-size: 28px;
-                color: white;
+                font-size: 16px;
+                color: rgb(255, 255, 255);
                 font-weight: 700;
               }
-      
-              h2 {
-                text-align: center;
-                font-family: 'Open Sans', sans-serif;
-                font-size: 16px;
-                color: rgb(255, 255, 255, 0.65);
-                font-weight: 300;
-              }
+
            }
           
           div.content {
