--- a/assets/src/components/Games/Games.scss
+++ b/assets/src/components/Games/Games.scss
@@ -21,7 +21,7 @@ div.submit {
   align-items: center;  
   margin-bottom: 4px;
   a{
-      background-color: rgb(243, 243, 243);
+      background-color: #3FC7F1;
       font-family: 'Open Sans', sans-serif;
       font-size: 14px;
       font-weight: 600;
