--- a/assets/src/components/AnnouncementBox.scss
+++ b/assets/src/components/AnnouncementBox.scss
@@ -1,10 +1,13 @@
 div.announcement-box {
     padding: 25px 20px;
+    padding-bottom: 5px;
     background-color: #27292C;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 5px;
     max-width: 500px;
     margin-bottom: 50px;
+    max-height:300px;
+    overflow-y: scroll;
     //margin-right: 200px;
   
       div.head {
@@ -22,7 +25,7 @@ div.announcement-box {
           div.date{
             background-color: #323437;
             height: 30px;
-            width: 60px;
+            width: 75px;
             border-radius: 5px;
             padding-top: 5px;
             margin-right: 10px;
@@ -49,6 +52,7 @@ div.announcement-box {
       }
       
       p {
+        margin-bottom: 20px;
         font-family: 'Open Sans', sans-serif;
         font-size: 16px;
         color: white;
